--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,10 @@
   box-sizing: border-box;
 }
 body {
-  height: 100vh;
+  width: 100%;
+  /* height: 100vh; */
   margin: 0;
+  padding: 0;
   /* overflow: hidden; */
 }
 main {
@@ -50,101 +52,8 @@ main {
 .ul-style {
   list-style: none;
 }
-/* header{
-    box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
-} */
-.navbar {
-  width: 100%;
-  height: 4rem;
-  padding: 1rem 2rem;
-  justify-content: space-between;
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
-  position: relative;
-  z-index: 5;
-}
-.menu {
-  width: 35%;
-  justify-content: space-between;
-}
-.btn-navbar {
-  padding: 10px 15px;
-}
-.hero-section {
-  position: relative;
-  z-index: 1;
-  justify-content: center;
-  width: 100%;
-  height: 32rem;
-  background-image: repeating-radial-gradient(
-    circle at left,
-    var(--light-blue),
-    #f6f8f8 55%,
-    #ffffff
-  );
-}
-.content-hero {
-  width: 35%;
-  text-align: center;
-  padding: 1rem;
-}
-.head-title-section {
-  font-size: 1.8rem;
-  margin-bottom: 1rem;
-}
-.title-center {
-  text-align: center;
-}
-.p-blue {
-  font-size: 1.2rem;
-}
-.word-space-2 {
-  word-spacing: 2px;
-}
-.margin-text {
-  margin: 2rem 0 1rem;
-}
-.btn-hero {
-  padding: 12px 30px;
-  margin: 1rem 0;
-}
-.about-section,
-.services-section,
-.portfolio-section 
-, .contact-section{
-  width: 100%;
-  height: max-content;
-  justify-content: center;
-  padding: 1rem;
-  margin: 2rem 0 0;
-}
-.content-about {
-  width: 70%;
-}
-.check-i {
-  color: #26ae60;
-}
-.container-team-card,
-.container-services-card,
-.container-card-portfolio {
-  justify-content: space-between;
-}
-.team-card {
-  width: 12rem;
-  height: 18rem;
-  padding: 1.5rem;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  row-gap: 0.5rem;
-}
-.personal-icon {
-  font-size: 2.5rem;
-  padding: 1.5rem 1.7rem;
-  background-color: var(--used-garay);
-  border-radius: 50%;
+.text-decoration{
+  text-decoration: none;
 }
 .m-top3-r {
   margin-top: 3rem;
@@ -167,8 +76,120 @@ main {
 .text-center {
   text-align: center;
 }
+.navbar {
+  width: 100%;
+  padding: 0 2rem;
+  justify-content: space-between;
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 5;
+}
+.menu {
+  width: 35%;
+  justify-content: space-between;
+}
+.nav-mob{
+  display: none;
+}
+.burger-menu{
+  display: none;
+}
+.btn-navbar {
+  padding: 10px 15px;
+}
+.hero-section {
+  position: relative;
+  z-index: 1;
+  justify-content: center;
+  width: 100%;
+  background-image: repeating-radial-gradient(
+    circle at left,
+    var(--light-blue),
+    #f6f8f8 55%,
+    #ffffff
+  );
+}
+.content-hero {
+  width: 35%;
+  text-align: center;
+  padding: 7rem 1rem;
+}
+.head-title-section {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+.title-center {
+  text-align: center;
+}
+.p-blue {
+  font-size: 1.2rem;
+}
+.word-space-2 {
+  word-spacing: 2px;
+}
+.margin-text {
+  margin: 2rem 0 1rem;
+}
+.btn-hero {
+  padding: 12px 30px;
+  margin: 1rem 0;
+}
+.about-section{
+  width: 100%;
+  justify-content: center;
+  padding: 3rem 0 4rem;
+}
+.services-section,
+.portfolio-section 
+, .contact-section{
+  width: 100%;
+  justify-content: center;
+  padding: 3rem 0;
+}
+.content-about {
+  width: 70%;
+}
+.check-i {
+  color: #26ae60;
+}
+.container-card-portfolio {
+  justify-content: space-between;
+}
+.container-team-card{
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 1rem;
+}
+.team-card {
+  width: 12rem;
+  padding: 1.5rem;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem;
+}
+.personal-icon {
+  font-size: 2.5rem;
+  padding: 1.5rem 1.7rem;
+  background-color: var(--used-garay);
+  border-radius: 50%;
+  /* flex: 1; */
+}
+/* .name-personal-team{
+  flex: 1;
+}
+.role-personal-team{
+  flex: 1;
+}*/
+/* .description-personal-team{
+  flex: 1;
+}  */
 .edit-icon {
-  padding: 1.5rem !important;
+  padding: 1.7rem !important;
 }
 .services-section {
   background-color: var(--light-blue);
@@ -179,13 +200,14 @@ main {
   margin-bottom: 2rem;
 }
 .container-services-card {
-  margin: 2rem 0;
+  display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   row-gap: 1.5rem;
+  align-items: stretch;
 }
 .servic-card {
   width: 16rem;
-  height: 22rem;
   padding: 1.5rem 1rem;
   background-color: var(--used-white);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
@@ -194,7 +216,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  row-gap: 0.5rem;
+  gap: 0.5rem;
 }
 .services-icon {
   font-size: 1.5rem;
@@ -231,7 +253,6 @@ main {
 }
 .t-package {
   width: 100%;
-  height: max-content;
   text-align: center;
   border-collapse: collapse;
   margin: 2rem 0;
@@ -267,10 +288,10 @@ tbody .tr-p:last-child .td-p:last-child {
 }
 .container-card-portfolio {
   margin: 3rem auto;
+  align-items: stretch !important;
 }
 .portfolio-card {
   width: 16rem;
-  height: max-content;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   display: flex;
@@ -292,6 +313,9 @@ tbody .tr-p:last-child .td-p:last-child {
   padding: 1rem;
   margin-bottom: 0.6rem;
 }
+/* .portfolio-icon:last-child{
+  padding-top: 2.5rem;
+} */
 .text-card-portfolio {
   flex: 1;
   margin-top: 1rem;
@@ -306,7 +330,6 @@ tbody .tr-p:last-child .td-p:last-child {
 .btn-group-portfolio {
   margin: 0 auto;
   width: 80%;
-  height: max-content;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -315,8 +338,6 @@ tbody .tr-p:last-child .td-p:last-child {
 }
 .btn-portfolio {
   border: none;
-  /* width: 60px;
-    height: 30px; */
   padding: 10px;
   font-size: 10px;
   border-radius: 35px;
@@ -347,10 +368,12 @@ tbody .tr-p:last-child .td-p:last-child {
 }
 .container-forms{
     width: 100%;
+    display: flex;
     justify-content: space-between;
-    column-gap: 2rem;
-    margin: 2rem 0;
+    gap: 2rem;
+    margin: 2rem auto;
     align-items: flex-start !important;
+    flex-wrap: wrap;
 }
 .contact-card{
     background-color: var(--used-white);
@@ -364,23 +387,14 @@ tbody .tr-p:last-child .td-p:last-child {
     flex: 1;
 }
 .form{
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 30rem; */
     margin: auto;
-}
-.title-form{
-    /* align-self: flex-start; */
 }
 .box-input{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 3rem;
-    gap: 10px;
-    margin: 1.5rem auto;
+    gap: 8px;
+    margin: 1.2rem auto;
     align-items: center;
     justify-content: space-around;
     
@@ -405,9 +419,15 @@ tbody .tr-p:last-child .td-p:last-child {
     align-items: center;
     margin-top: 1rem;
 }
+.box-radio-price{
+  width: 20%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+}
 .box-price{
     width: 5rem;
-    height: max-content;
     word-wrap: break-word;
 }
 .box-price span{
@@ -419,7 +439,6 @@ tbody .tr-p:last-child .td-p:last-child {
 .textarea-input{
     margin: 1rem auto 0;
     width: 100%;
-    height: 5rem;
     resize: none;
     outline: none;
     border: 2px solid var(--used-garay);
@@ -452,18 +471,18 @@ tbody .tr-p:last-child .td-p:last-child {
     justify-content: center;
     row-gap: 5px;
     margin-bottom: 1rem;
+    align-items: flex-start;
 }
 .blue-text{
     color: var(--middle-blue);
 }
 footer{
     width: 100%;
-    height: 8rem;
     background-color: var(--navy-blue);
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
+    padding: 1.5rem;
     margin: 0;
 }
 .footer-section{
@@ -489,7 +508,7 @@ footer{
 .copy-right{
     font-size: 12px;
     color: #707070;
-    padding-bottom: 10px;
+    /* padding-bottom: 10px; */
 }
 .part-right{
  flex: 1;
@@ -505,4 +524,3 @@ footer{
     font-size: 12px;
     
 }
-
