--- a/css/style-mob.css
+++ b/css/style-mob.css
@@ -25,6 +25,17 @@ body {
 main {
   /* overflow: hidden; */
 }
+.up-icon{
+  color: #1381CE;
+  position: fixed;
+  top: 85vh;
+  left: 2rem;
+  z-index: 10;
+  opacity: 0.7;
+}
+.up-icon:hover{
+  opacity: 1;
+}
 .bg-blue {
   background-color: var(--middle-blue);
   color: var(--used-white);
