--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ main {
 .up-icon{
   color: #1381CE;
   position: fixed;
-  top: 88vh;
-  left: 2vw;
+  bottom: 2rem;
+  left: 2rem;
   z-index: 10;
   opacity: 0.7;
 }
